/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    
    maven {
        url  "https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine" 
    }
    
    maven { url 'https://jitpack.io' }
    
    // mavenLocal()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:28.2-jre'
	implementation 'ch.qos.logback:logback-classic:1.2.3'

    implementation 'com.github.stephengold:Heart:6.0.0'
    
    implementation 'com.simsilica:sio2:1.5.0'
    implementation 'org.codehaus.groovy:groovy-all:3.0.3'
    implementation 'com.simsilica:lemur:1.14.0'
    implementation 'com.simsilica:lemur-proto:1.11.0'
    implementation 'com.simsilica:lemur-props:1.1.1'
    
    implementation 'org.jmonkeyengine:jme3-core:3.3.2-stable'
    implementation 'org.jmonkeyengine:jme3-desktop:3.3.2-stable'
    implementation 'org.jmonkeyengine:jme3-lwjgl3:3.3.2-stable'
    implementation 'org.jmonkeyengine:jme3-effects:3.3.2-stable'
    implementation 'org.jmonkeyengine:jme3-terrain:3.3.2-stable'
    implementation 'org.jmonkeyengine:jme3-plugins:3.3.2-stable'
    
    implementation 'org.jmonkeyengine:jme3-testdata:3.3.2-stable'
    
    //implementation 'com.github.Jeddic:particlemonkey:1.0.2'
    
    // via jitpack.io
    implementation 'com.github.walfram:jme3-addons:-SNAPSHOT'
    
    testImplementation(platform('org.junit:junit-bom:5.7.0'))
	testImplementation('org.junit.jupiter:junit-jupiter')
}

application {
    // Define the main class for the application.
    mainClassName = 'sandbox3.bblaster.BoulderBlasterApp'
}

test {
    useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}
